--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,11 @@ codescreen/coverage/output/results
 .idea
 *.iml
 
+#VS Code
+.vscode/
+
+# Local SQLite storage
+data/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
